# oxc-miette

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/: FUNDING.yml  renovate.json
.github/workflows/: benchmark.yml  ci.yml  release.yml  zizmor.yml
benches/: performance.rs  render.rs
examples/: fix_diff_demo.rs
miette-derive/: CHANGELOG.md  Cargo.toml
miette-derive/src/: code.rs  diagnostic.rs  diagnostic_arg.rs  diagnostic_source.rs  fix_diff.rs  fmt.rs  forward.rs  help.rs  label.rs  lib.rs  note.rs  related.rs  severity.rs  source_code.rs  url.rs  utils.rs
src/: chain.rs  diagnostic_chain.rs  error.rs  fmt.rs  handler.rs  into_diagnostic.rs  kind.rs  lib.rs  macro_helpers.rs  macros.rs  miette_diagnostic.rs  named_source.rs  panic.rs  protocol.rs  ptr.rs  report.rs  report_impl.rs  source_impls.rs  wrap_err.rs  wrapper.rs
src/eyreish/: context.rs  error.rs  fmt.rs  kind.rs  macros.rs  mod.rs  ptr.rs  wrapper.rs
src/handlers/: debug.rs  graphical.rs  json.rs  mod.rs  narratable.rs  snippets.rs  theme.rs
src/handlers/graphical/: gutter.rs  handler.rs  label.rs  line.rs  mod.rs  report.rs  single_scan_tests.rs  snippet.rs  span.rs
src/handlers/graphical/snapshots/: miette__handlers__graphical__label__tests__repeated_chars_match_standard_output.snap  miette__handlers__graphical__line__tests__get_lines_preserves_line_geometry.snap  miette__handlers__graphical__report__tests__fill_fast_path_matches_textwrap.snap
src/handlers/snapshots/: miette__handlers__json__escape.snap
src/highlighters/: blank.rs  mod.rs  syntect.rs
src/snapshots/: miette__source_impls__line_column_tests__matches_read_span_exhaustively.snap  miette__source_impls__scanner_tests__scanner_matches_span_reader_exhaustively.snap  miette__source_impls__scanner_tests__zero_length_spans_at_eof.snap  miette__source_impls__tests__basic.snap  miette__source_impls__tests__lf_prefix_fast_path_matches_generic_path.snap  miette__source_impls__tests__middle.snap  miette__source_impls__tests__middle_of_line.snap  miette__source_impls__tests__multiline_with_context.snap  miette__source_impls__tests__multiline_with_context_line_start.snap  miette__source_impls__tests__shifted.snap  miette__source_impls__tests__with_context.snap  miette__source_impls__tests__with_crlf.snap  miette__source_impls__tests__zero_length_span_just_past_eof.snap
tests/: color_format.rs  compiletest.rs  derive.rs  graphical.rs  miette_diagnostic.rs  narrated.rs  protocol.rs  single_scan.rs  test_boxed.rs  test_chain.rs  test_context.rs  test_convert.rs  test_derive_attr.rs  test_derive_collection.rs  test_derive_source_chain.rs  test_diagnostic_source_macro.rs  test_downcast.rs  test_emoji_underline.rs  test_fix_diff.rs  test_fix_diff_derive.rs  test_fmt.rs  test_handler_access.rs  test_json.rs  test_location.rs  test_macros.rs  test_note.rs  test_repr.rs  test_source.rs  test_source_code_name.rs  wrapper.rs
tests/common/: mod.rs
tests/drop/: mod.rs
