[workspace]
resolver = "3"
members = ["miette-derive"]

[workspace.package]
authors = ["Boshen", "Kat Marchán <kzm@zkat.tech>"]
categories = ["rust-patterns"]
repository = "https://github.com/oxc-project/oxc-miette"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

[package]
name = "oxc-miette"
description = "Fancy diagnostic reporting library and protocol for us mere mortals who aren't compiler hackers."
documentation = "https://docs.rs/oxc-miette"
readme = "README.md"
version = "3.0.1"
authors.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["images/", "tests/", "miette-derive/"]

[lib]
name = "miette"

[[bench]]
name = "render"
harness = false
# Downloads fixtures on first run, so keep it out of `cargo test` (which would
# run it once). It is still built by the benchmark workflow and `just bench`.
test = false
required-features = ["fancy"]

[[test]]
name = "color_format"
required-features = ["derive", "fancy-no-backtrace"]

[[test]]
name = "derive"
required-features = ["derive"]

[[test]]
name = "graphical"
required-features = ["derive", "fancy-no-backtrace"]

[[test]]
name = "narrated"
required-features = ["derive", "fancy-no-backtrace"]

[[test]]
name = "test_derive_attr"
required-features = ["derive"]

[[test]]
name = "test_derive_collection"
required-features = ["derive"]

[[test]]
name = "test_derive_source_chain"
required-features = ["derive"]

[[test]]
name = "test_diagnostic_source_macro"
required-features = ["derive"]

[[test]]
name = "test_emoji_underline"
required-features = ["derive", "fancy-no-backtrace"]

[[test]]
name = "test_json"
required-features = ["derive"]

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[lints.clippy]
must_use_candidate = "warn"
return_self_not_must_use = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
oxc-miette-derive = { path = "miette-derive", version = "=3.0.1", optional = true }

# Relaxed version so the user can decide which version to use.
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
owo-colors = { version = "4", optional = true }
cfg-if = "1"

bytecount = "0.6.9"
memchr = "2"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"

textwrap = { version = "0.16.2", optional = true }
supports-hyperlinks = { version = "3.1.0", optional = true }
supports-color = { version = "3.0.2", optional = true }
supports-unicode = { version = "3.0.0", optional = true }
backtrace = { version = "0.3.74", optional = true }
terminal_size = { version = "0.4.2", optional = true }
backtrace-ext = { version = "0.2.1", optional = true }

[dev-dependencies]
semver = "1.0.26"

# Eyre devdeps
futures = { version = "0.3", default-features = false }
indenter = "0.3.3"
rustversion = "1.0"
trybuild = { version = "1.0.104", features = ["diff"] }
regex = "1.11"
lazy_static = "1.5"

serde_json = "1.0.140"
insta = "1.46.1"

# Benchmark deps
criterion2 = { version = "3", default-features = false }
ureq = "3"

[features]
default = ["derive"]
derive = ["oxc-miette-derive"]
no-format-args-capture = []
fancy-base = [
    "owo-colors",
    "textwrap",
]
fancy-no-syscall = [
    "fancy-base",
]
fancy-no-backtrace = [
    "fancy-base",
    "terminal_size",
    "supports-hyperlinks",
    "supports-color",
    "supports-unicode",
]
fancy = ["fancy-no-backtrace", "backtrace", "backtrace-ext"]
# Enables CodSpeed's instrumented harness for `cargo codspeed`. Pulls in `fancy`
# because the benchmark renders diagnostics via `GraphicalReportHandler`.
codspeed = ["criterion2/codspeed", "fancy"]

[package.metadata.docs.rs]
all-features = true

[profile.dev.package]
# Compile insta and its dependencies in release mode for faster snapshot tests
# See: https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
