[workspace]
resolver = "3"
members = ["miette-derive"]

[workspace.package]
authors = ["Boshen", "Kat Marchán <kzm@zkat.tech>"]
categories = ["rust-patterns"]
keywords = ["diagnostics", "error-reporting", "terminal"]
readme = "README.md"
repository = "https://github.com/oxc-project/oxc-miette"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

# <https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html>
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn" # Must be opt-in
print_stderr = "warn" # Must be opt-in
allow_attributes = "warn"
# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating by accident.
clone_on_ref_ptr = "warn"
# These two are mutually exclusive, I like `mod.rs` files for better fuzzy searches on module entries.
self_named_module_files = "warn" # "-Wclippy::mod_module_files"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
empty_enum_variants_with_brackets = "warn"
exit = "warn"
# Performance: avoid the intermediate `String` allocation of `s.push_str(&format!(..))`.
format_push_string = "warn"
# Casting a function item/pointer to a number is almost always a mistake (a missing call).
fn_to_numeric_cast_any = "warn"
unnecessary_self_imports = "warn"
# `return Err(x)?` obscures a plain `return Err(x.into())`.
try_err = "warn"
# Don't name a type `Error` when it implements `std::error::Error`.
error_impl_error = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"
map_with_unused_argument_over_ranges = "warn"
unused_result_ok = "warn"
pathbuf_init_then_push = "warn"
pub_underscore_fields = "warn"
non_zero_suggestions = "warn"
precedence_bits = "warn"
# I want to write the best Rust code so pedantic is enabled.
# We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
pedantic = { level = "warn", priority = -1 }
# Allowed rules
# pedantic
# All triggers are mostly ignored in our codebase, so this is ignored globally.
struct_excessive_bools = "allow"
too_many_lines = "allow"
# `#[must_use]` is creating too much noise for this codebase, it does not add much value
# except nagging the programmer to add a `#[must_use]` after clippy has been run.
# Having `#[must_use]` everywhere also hinders readability.
must_use_candidate = "allow"
# Preserve this repository's existing builder-return lint.
return_self_not_must_use = "warn"
# Too annoying, we import by name anyway.
wildcard_imports = "allow"
doc_markdown = "allow"
similar_names = "allow"
fn_params_excessive_bools = "allow"
complexity = { level = "warn", priority = -1 }
too_many_arguments = "allow"
non_std_lazy_statics = "allow"
# `OxcDiagnostic` is inlined (~176 bytes) to keep `OxcDiagnostic::error` allocation-free.
# This is a deliberate trade-off: larger `Result<T, OxcDiagnostic>` for zero malloc on the hot path.
result_large_err = "allow"
# nursery
nursery = { level = "warn", priority = -1 }
# `const` functions do not make sense for our project because this is not a `const` library.
# This rule also confuses newcomers and forces them to add `const` blindlessly without any reason.
missing_const_for_fn = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
cognitive_complexity = "allow"
non_send_fields_in_send_ty = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
branches_sharing_code = "allow"
fallible_impl_from = "allow"
useless_let_if_seq = "allow"
impl_trait_in_params = "allow"
significant_drop_in_scrutinee = "warn"
iter_on_single_items = "warn"
unused_peekable = "warn"
too_long_first_doc_paragraph = "warn"
suspicious_operation_groupings = "warn"
redundant_clone = "warn"
# FIXME: New warnings introduced by Rust 1.97.
byte_char_slices = "allow"
question_mark = "allow"
# cargo
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
# Public feature retained for compatibility with existing users.
negative_feature_names = "allow"

[package]
name = "oxc-miette"
description = "Fancy diagnostic reporting library and protocol for us mere mortals who aren't compiler hackers."
documentation = "https://docs.rs/oxc-miette"
readme = "README.md"
keywords.workspace = true
version = "4.0.0"
authors.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["images/", "tests/", "miette-derive/"]

[lib]
name = "miette"

[[bench]]
name = "render"
harness = false
# Downloads fixtures on first run, so keep it out of `cargo test` (which would
# run it once). It is still built by the benchmark workflow and `just bench`.
test = false
required-features = ["fancy"]

[lints]
workspace = true

[dependencies]
oxc-miette-derive = { path = "miette-derive", version = "=4.0.0", optional = true }

# Relaxed version so the user can decide which version to use.
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
owo-colors = { version = "4", optional = true }
cfg-if = "1"

bytecount = "0.6.9"
memchr = "2"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"

textwrap = { version = "0.16.2", optional = true }
supports-hyperlinks = { version = "3.1.0", optional = true }
supports-color = { version = "3.0.2", optional = true }
supports-unicode = { version = "3.0.0", optional = true }
backtrace = { version = "0.3.74", optional = true }
terminal_size = { version = "0.4.2", optional = true }
backtrace-ext = { version = "0.2.1", optional = true }

[dev-dependencies]
semver = "1.0.26"

# Eyre devdeps
futures = { version = "0.3", default-features = false }
indenter = "0.3.3"
rustversion = "1.0"
trybuild = { version = "1.0.104", features = ["diff"] }
regex = "1.11"

serde_json = "1.0.140"
insta = "1.46.1"

# Benchmark deps
criterion2 = { version = "3", default-features = false }
ureq = "3"

[features]
default = ["derive"]
derive = ["oxc-miette-derive"]
no-format-args-capture = []
fancy-base = [
    "owo-colors",
    "textwrap",
]
fancy-no-syscall = [
    "fancy-base",
]
fancy-no-backtrace = [
    "fancy-base",
    "terminal_size",
    "supports-hyperlinks",
    "supports-color",
    "supports-unicode",
]
fancy = ["fancy-no-backtrace", "backtrace", "backtrace-ext"]
# Enables CodSpeed's instrumented harness for `cargo codspeed`. Pulls in `fancy`
# because the benchmark renders diagnostics via `GraphicalReportHandler`.
codspeed = ["criterion2/codspeed", "fancy"]

[package.metadata.docs.rs]
all-features = true

[profile.dev.package]
# Compile insta and its dependencies in release mode for faster snapshot tests
# See: https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
