[package]
name = "oxc-miette-derive"
description = "Derive macros for miette. Like `thiserror` for Diagnostics."
version = "3.0.1"
authors.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
# Relaxed version so the user can decide which version to use.
cfg-expr = "0.20"
proc-macro2 = "1"
proc-macro-crate = "3.5"
quote = "1"
syn = "3"
toml_edit = { version = "0.25", features = ["parse"], default-features = false }
