[package]
name = "oxc-miette-derive"
description = "Derive macros for miette. Like `thiserror` for Diagnostics."
version = "3.0.1"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[lints]
workspace = true

[dependencies]
# Relaxed version so the user can decide which version to use.
proc-macro2 = "1"
quote = "1"
rustc-hash = "2"
syn = "3"
